fix(boom-web): unnecessary scrollbars on chrome

--- a/boom-web/assets/bangs/style.css
+++ b/boom-web/assets/bangs/style.css
@@ -140,7 +140,7 @@ table td {
 
   pointer-events: none;
 
-  overflow-x: scroll;
+  overflow-x: auto;
   word-break: break-all;
 
   & a {
